<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Usuario"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_Usuario" />
        <item
            android:id="@+id/nav_Deposito"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_Deposito" />
        <item
            android:id="@+id/nav_Proveedor"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_Proveedor" />
        <item
            android:id="@+id/nav_Producto"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_Producto" />
        <item
            android:id="@+id/nav_U_Medida"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_UnidaddeMedida" />
        <item
            android:id="@+id/nav_Pedido"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_Pedido" />
        <item
            android:id="@+id/nav_Presupuesto"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_Presupuesto" />
    </group>
    <item
        android:id="@+id/nav_salir"
        android:icon="@drawable/baseline_logout_24"
    android:title="Cerrar Sesion" />
</menu>
